Adicionado menu à aplicação

--- a/ado_net/exercicio3/exercicio3/App.config
+++ b/ado_net/exercicio3/exercicio3/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="SI2_1314v_TPEntities" connectionString="metadata=res://*/DbModel.csdl|res://*/DbModel.ssdl|res://*/DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANDRE-TOSHIBA;initial catalog=SI2_1314v_TP;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SI2_1314v_TPEntities" connectionString="metadata=res://*/DbModel.csdl|res://*/DbModel.ssdl|res://*/DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CLASS\ISEL;initial catalog=SI2_1314v_TP;user id=sa;password=password123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
