Solução "optimista" da questão 4.c (no menu corresponde ao item 'i') Novas entradas no ficheiro app.config:  Nova connection string para usar ADO.net  Nova secção de "resources" onde se pode configurar a localização do ficheiro XML da questão 4.c

--- a/ado_net/exercicio3/exercicio3/App.config
+++ b/ado_net/exercicio3/exercicio3/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="resources" type="System.Configuration.NameValueSectionHandler" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -19,5 +20,9 @@
   </entityFramework>
   <connectionStrings>
     <add name="SI2_1314v_TPEntities" connectionString="metadata=res://*/DbModel.csdl|res://*/DbModel.ssdl|res://*/DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CLASS\ISEL;initial catalog=SI2_1314v_TP;user id=sa;password=password123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <add name="SI2_1314v_ADO_NET" connectionString="Data Source=CLASS\ISEL;Initial Catalog=SI2_1314v_TP;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <resources>
+    <add key="Ocorrencias_xml" value="../../../../../xml/ocorrencias.xml" />
+  </resources>
 </configuration>
