Relatório atualizado e grupo 3 concluído

--- a/ado_net/exercicio3/exercicio3/exercicio3.csproj
+++ b/ado_net/exercicio3/exercicio3/exercicio3.csproj
@@ -85,12 +85,21 @@
     <Compile Include="Localizacao.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ObterEmpresaComMaxCritoOcorrPorAreaInt_Result.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Ocorrencia.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OcorrenciasEmIncumprimento.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sector.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TotalOcorrenciaPorEmpresaPorTipo.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Trabalho.cs">
